--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ simdnoise = "3.1"
 winit = "0.23"
 ash = "0.31"
 vk-mem = "0.2"
-nphysics3d = "0.18"
 num = "0.3"
 memoffset = "0.6"
 cgmath = "0.17"
@@ -30,6 +29,7 @@ glsl-layout = "0.4"
 egui = "0.9"
 renderdoc = "0.10"
 exr = "1.1"
+rapier3d = "0.8"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
