--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,7 @@ exr = "1.1"
 rapier3d = "0.8"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
+winapi = { version = "0.3", features = ["windef", "libloaderapi"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cocoa = { version = "0.24", features = ["mac_os_10_8_features"] }
