--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ rapier3d = "0.8"
 winapi = { version = "0.3", features = ["windef", "libloaderapi"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-cocoa = { version = "0.24", features = ["mac_os_10_8_features"] }
+cocoa = { version = "0.24" }
